--- a/API/package.json
+++ b/API/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "API for Saving Grace application",
   "main": "build/server.js",
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "scripts": {
     "test": "jest",
     "start:watch": "tsc --watch & nodemon --experimental-specifier-resolution=node build/server.js",
@@ -32,32 +35,28 @@
   },
   "homepage": "https://github.com/HACKATONA-ES-2020/embrasacodigo#readme",
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.8",
     "@types/lodash": "^4.14.161",
     "@types/node": "^14.11.2",
+    "@types/sequelize": "^4.28.9",
+    "bcrypt": "^5.0.0",
     "chalk": "^4.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "knex": "^0.21.5",
     "lodash": "^4.17.20",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.3.5",
     "typescript": "^4.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
-    "@types/jest": "^26.0.14",
     "@typescript-eslint/eslint-plugin": "^3.6.0",
     "@typescript-eslint/parser": "^3.6.0",
-    "babel-jest": "^26.3.0",
     "eslint": "^7.9.0",
     "eslint-plugin-node": "^11.1.0",
-    "husky": "^4.2.5",
-    "jest": "^26.4.2",
     "nodemon": "^2.0.4",
-    "prettier": "^2.1.2",
-    "ts-jest": "^26.4.0"
+    "prettier": "^2.1.2"
   },
   "prettier": {
     "trailingComma": "none",
