--- a/API/package.json
+++ b/API/package.json
@@ -45,6 +45,7 @@
     "chalk": "^4.1.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "http-status-codes": "^2.1.4",
     "lodash": "^4.17.20",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
