--- a/API/.eslintrc.json
+++ b/API/.eslintrc.json
@@ -3,6 +3,7 @@
 		"es2020": true,
 		"node": true
 	},
+	"ignorePatterns": "*.js",
 	"extends": [
 		"eslint:recommended",
 		"plugin:@typescript-eslint/recommended",
