--- a/API/package.json
+++ b/API/package.json
@@ -29,7 +29,7 @@
     "TypeScript"
   ],
   "author": "Rafael Lopes Schneider",
-  "license": "ISC",
+  "license": "GPLv3",
   "bugs": {
     "url": "https://github.com/HACKATONA-ES-2020/embrasacodigo/issues"
   },
